Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-8832

Encryption meta data should not be stored when ENCRYPTED=DEFAULT and innodb-encrypt-tables=OFF

    XMLWordPrintable

Details

    • 10.1.8-3

    Description

      fil_space_create_crypt_data() should be done if and only if when

      • ENCRYPTED=OFF
      • ENCRYPTED=YES
      • ENCRYPTED=DEFAULT && innodb-encrypt-tables=ON

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            jplindst Jan Lindström (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5d
                0.5d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.